# autoreg_fb_vt_tt

./: .gitignore  AGENTS.md  README.md  faker_demo.py  main.py  pyproject.toml  test.py  tmp.py
.github/workflows/: flet-macos-tag.yml
.xz_planning/: PROJECT.md  README.md  STATE.md
.xz_planning/archive/1.V站取码/: 1-PLAN.md
.xz_planning/archive/2.注册方式/: 2-PLAN.md
assets/: icon.icns
autovt/: __init__.py  adb.py  cli.py  desc.py  fr_desc.py  logs.py  runtime.py  settings.py
autovt/auth/: __init__.py  login_service.py
autovt/emails/: __init__.py  emails.py  fackbook_code.py  new1卡密信息_XJL2603040080LX27A.txt  newv3卡密信息_XJL2603040080LX27A.txt  new卡密信息_XJL2603040080LX27A.txt  outlook.py  test.html  test.py  test_vt.py  v2新卡密信息_XJL2602042250Q7TNL.txt  v3新卡密信息_XJL2602042250Q7TNL.txt  vinted_code.py  新卡密信息_XJL2602042250Q7TNL.txt
autovt/gui/: __init__.py  account_importer.py  account_tab.py  app.py  device_refresh_coordinator.py  device_tab.py  helpers.py  login_view.py  settings_tab.py
autovt/multiproc/: __init__.py  manager.py  process_guard.py  worker.py
autovt/ocr/: __init__.py  paddle_ocr_service.py  test.py
autovt/tasks/: open_settings.py  task_context.py  vinted.py
autovt/userdb/: __init__.py  user_db.py
doc/: flet_packaging.md  modify.md  ocr.md  project_structure.md
log/debug/64fb07e2/: log.txt
log/json/: 64fb07e2.jsonl  8446b799.jsonl  XWN0221104007185.jsonl  check-debug.jsonl  check-default.jsonl  check-env.jsonl  check.jsonl  demo123.jsonl  filecheck.jsonl  manager.jsonl  selftest.jsonl
scripts/: patch_flet_app.sh
tests/: test_user_db.py
(+12 files in other folders)
